client/src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 16px;
  margin-top: 5px;
}

body {
  margin: 0;
  box-sizing: border-box;
  height: 100%;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.wrapper {
  box-sizing: border-box;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.footer {
  flex-shrink: 0;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}


Nav header{
  max-width: 100%;
}



.alldetails_button {
    height: 60px;
    width: 300px;
    font-size: 1.2rem;
    font-family: Tahoma;
}
.login_button, .signup_button {
    height: 40px;
    width: 150px;
    font-size: 1.2rem;
    font-family: Tahoma;
}

.dashboard_buttons {
    height: 50px;
    width: 100px;
    font-size: 2.5rem;
    font-family: Tahoma;
}

